--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "handlebars": "^4.0.11",
     "handlebars-loader": "^1.7.0",
     "jquery": "^3.3.1",
