--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-stage-2": "^6.24.1",
+    "bootstrap": "^4.1.1",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "handlebars": "^4.0.11",
     "handlebars-loader": "^1.7.0",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.1.2"
